Update testing docs
Signed-off-by: irishgordo <irishgordo@users.noreply.github.com>

--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -75,6 +75,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.support_bundle" href="support_bundle.html">harvester_e2e_tests.fixtures.support_bundle</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.user" href="user.html">harvester_e2e_tests.fixtures.user</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -120,6 +124,7 @@
 <li><code><a title="harvester_e2e_tests.fixtures.keypair" href="keypair.html">harvester_e2e_tests.fixtures.keypair</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.network" href="network.html">harvester_e2e_tests.fixtures.network</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.session" href="session.html">harvester_e2e_tests.fixtures.session</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.support_bundle" href="support_bundle.html">harvester_e2e_tests.fixtures.support_bundle</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.user" href="user.html">harvester_e2e_tests.fixtures.user</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.vm" href="vm.html">harvester_e2e_tests.fixtures.vm</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.vm_template" href="vm_template.html">harvester_e2e_tests.fixtures.vm_template</a></code></li>
