Update testing docs
Signed-off-by: irishgordo <irishgordo@users.noreply.github.com>

--- a/manual/harvester-rancher/39-rbac-standard-user-no-access/index.html
+++ b/manual/harvester-rancher/39-rbac-standard-user-no-access/index.html
@@ -1554,8 +1554,8 @@
 <li>As admin, Enable Harvester node driver</li>
 <li>As a standard user User1, login to rancher</li>
 <li>Verify User1 has no access to harvester cluster in Virtualization management page</li>
-<li>Create harvester cloud credential as User1</li>
-<li>Verify User1 can use this cloud credential to create a node template and a node driver cluster 3 and can CRUD each resource</li>
+<li>Verify User1 can not create harvester cloud credential as User1</li>
+<li>Verify User1 can not use this cloud credential to create a node template and can not use a node driver cluster 3 and can not CRUD each resource</li>
 </ol>
 
     </article>
